--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>My test page</title>
+    <title>Neural Networks</title>
   </head>
   <body>
     <article>
